# rust-simple-api

rust-api/: .env  Cargo.toml
rust-api/src/: main.rs
rust-api/src/data1/: home.rs
rust-api/src/data2/: file_1.rs  mod.rs
rust-api/src/data2/data3/: file_3.rs
