[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.0.2"
serde = {version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.13.3"
env_logger = "0.10.0"
serde_json = "1.0.56"
